# code-indexer-loop

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: gitleaks_pr.yaml  gitleaks_push.yaml  stale.yaml
cil/: api.py  constants.py  test_api.py  test_api_dummy_sql.sql.txt  utils.py
code_indexer_loop/: api.py  code_splitter.py  test_api.py  test_api_dummy_file.py.txt
examples/: basic_usage.ipynb
