[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "code-indexer-loop"
description = "Code Indexer Loop"
authors = [
    {name = "Rick Lamers", email = "rick@definitive.io"}
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "llama-index>=0.9.14",
    "chromadb>=0.4.8,<0.5",
    "tree-sitter-languages>=1.7.0,<1.8",
    "tree-sitter>=0.20.2,<0.21",
    "tiktoken>=0.4.0,<0.5",
    "langchain>=0.0.354",
    "watchdog>=2.3.1,<2.4",
    "nltk>=3.8.1,<3.9",
]

[project.optional-dependencies]
dev = [
    "toml ~=0.10.2",
    "black ~=23.3.0",
    "isort ~=5.9.3",
    "autoflake ~=2.2.0",
    "ruff ~=0.0.284",
    "pytest ~=7.4.1",
    "flit >=3.8.0,<4",
]
test = [
    "pytest-cov ~=3.0.0",
]

[tool.black]
line-length = 120

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9
target-version = "py39"